<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/measured_unit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/measured_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/conversion_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_what_to_convert_to"
        app:layout_constraintStart_toStartOf="@+id/measured_unit"
        app:layout_constraintTop_toBottomOf="@+id/measured_unit" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="@+id/conversion_text"
        app:layout_constraintTop_toBottomOf="@+id/conversion_text" />

    <RadioGroup
        android:id="@+id/unit_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/celsius"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature">

        <RadioButton
            android:id="@+id/celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_fahrenheit" />

        <RadioButton
            android:id="@+id/fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_celsius" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/weight" />

        <RadioButton
            android:id="@+id/grams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grams_cups" />

        <RadioButton
            android:id="@+id/cups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cups_grams" />

        <TextView
            android:id="@+id/fluid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/fluid" />

        <RadioButton
            android:id="@+id/millilitres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/millilitres_fluid_ounces" />

        <RadioButton
            android:id="@+id/fluid_ounces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fluid_ounces_millilitres" />
    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/round_up_conversion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/unit_options"
        app:layout_constraintTop_toBottomOf="@+id/unit_options"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@id/round_up_switch"
        app:layout_constraintStart_toStartOf="@+id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@+id/round_up_switch" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
        tools:text="Converted amount " />

</androidx.constraintlayout.widget.ConstraintLayout>